# bert-classification-tutorial

./: pyproject.toml
src/: prepare.py
