[tool.poetry]
name = "bert-classification-tutorial"
version = "0.2.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "3.10.x"
torch = "2.1.0"
transformers = { extras = ["ja", "sentencepiece"], version = "^4.30.0" }
numpy = "^1.25.0"
pandas = "^2.0.3"
more-itertools = "^9.1.0"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
typed-argument-parser = "^1.8.1"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
